# toy-jvm

./: .gitignore  CMakeLists.txt  README.md  check_mem_leaks.sh  style_code.sh
.github/workflows/: check-mem-leaks.yml  format-code.yml  run-tests.yml
include/class/: class_file.h
include/class_file/: attribute_info.h  class_access_flags.h  class_file.h  element_value_pair.h  exception_table.h  field.h  field_access_flags.h
include/class_file/annotation/: annotation.h
include/class_file/attribute/: attribute_header.h  attribute_info.h  attribute_type.h  parse_attributes.h
include/class_file/constant_pool/: TODO.md  constant_pool.h  constant_pool_item.h  constant_pool_tag.h
include/class_file/element_value/: element_value.h  element_value_array.h  element_value_enum.h  element_value_tag.h
include/class_file/field/: field.h  field_access_flags.h
include/constant_pool/: TODO.md  constant_pool.h  constant_pool_item.h
include/constant_pool/info_structs/: class_info.h  double_info.h  field_ref_info.h  float_info.h  integer_info.h  interface_method_ref_info.h  invoke_dynamic_info.h  long_info.h  method_handle_info.h  (+5 more)
include/data/: constant_pool.h
include/memory/: heap.h  pointer.h
include/status/: status_code.h
include/util/: file_util.h
src/: CMakeLists.txt
src/class/: class_file.c
src/class_file/: class_file.c  exception_table.c  field.c
src/constant_pool/: constant_pool.c
src/memory/: heap.c  pointer.c
src/util/: file_util.c
test/: CMakeLists.txt
test/class/: CMakeLists.txt  class_file_test.c  empty_main_class_file_test.c
test/class_file/: CMakeLists.txt  empty_main_class_file_test.c
test/memory/: CMakeLists.txt  heap_test.c
(+134 files in other folders)
